vlib/v/checker/tests/const_import_conflict_err.vv
import strings

const strings = ['hello', 'world']

fn main() {
	println(strings)
}
